--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-    "name": "node4",
-    "version": "1.0.0",
-    "description": "",
-    "main": "app.js",
-    "scripts": {
-        "start": "nodemon app.js"
-    },
-    "author": "wubet ayalew",
-    "license": "ISC",
-    "dependencies": {
-        "body-parser": "^1.20.0",
-        "dotenv": "^16.0.1",
-        "ejs": "^3.1.8",
-        "express": "^4.18.1",
-        "express-fileupload": "^1.4.0",
-        "firebase": "^9.9.1",
-        "firebase-admin": "^11.0.0",
-        "mongodb": "^4.8.0",
-        "mongoose": "^6.4.6",
-        "multer": "^1.4.5-lts.1",
-        "xhr2": "^0.2.1"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.19"
-    }
+  "name": "node4",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
+  "author": "wubet ayalew",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "firebase": "^9.9.1",
+    "firebase-admin": "^11.0.0",
+    "mongodb": "^4.8.0",
+    "mongoose": "^6.4.6",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "pug": "^3.0.2",
+    "xhr2": "^0.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wubetayalew/restaurant-web.git"
+  },
+  "bugs": {
+    "url": "https://github.com/wubetayalew/restaurant-web/issues"
+  },
+  "homepage": "https://github.com/wubetayalew/restaurant-web#readme",
+  "description": ""
 }
