--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "@google-cloud/storage": "^6.3.0",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
-    "firebase": "^9.9.1",
+    "firebase": "^9.9.2",
     "firebase-admin": "^11.0.0",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.6",
